--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,14 @@ code {
   margin: 0 auto;
   width: 600px; 
 }
+
+.rm {
+  background-image: linear-gradient(green, yellow);
+  border-radius: 40%;
+  border: none;
+  text-align: center;
+}
+
+.done {
+  text-decoration: line-through;
+}
